# api/docs/swagger.json
@@ -15,6 +15,37 @@
     },
     "host": "localhost:4000",
     "paths": {
+        "/effort-allocation/weekly": {
+            "post": {
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Effort Allocation"
+                ],
+                "summary": "Upload weekly report",
+                "parameters": [
+                    {
+                        "type": "file",
+                        "description": "File",
+                        "name": "file",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.UploadEaWeeklyReportResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/members": {
             "get": {
                 "consumes": [
@@ -254,6 +285,34 @@
         }
     },
     "definitions": {
+        "models.EaWeeklyEffort": {
+            "type": "object",
+            "properties": {
+                "category": {
+                    "type": "string"
+                },
+                "is_product_time": {
+                    "type": "boolean"
+                },
+                "time": {
+                    "type": "number"
+                }
+            }
+        },
+        "models.EaWeeklyMember": {
+            "type": "object",
+            "properties": {
+                "efforts": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.EaWeeklyEffort"
+                    }
+                },
+                "member": {
+                    "$ref": "#/definitions/models.Member"
+                }
+            }
+        },
         "models.EmptyResponse": {
             "type": "object",
             "properties": {
@@ -394,6 +453,20 @@
                 },
                 "technical_score": {
                     "type": "number"
+                }
+            }
+        },
+        "models.UploadEaWeeklyReportResponse": {
+            "type": "object",
+            "properties": {
+                "items": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.EaWeeklyMember"
+                    }
+                },
+                "total": {
+                    "type": "integer"
                 }
             }
         },
